Closed Bug 147446 Opened 24 years ago Closed 21 years ago

[FIX] A map definition inside a table and outside the tr element will add an extra space to the table

Categories

(Core :: DOM: HTML Parser, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roger, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: compat, testcase)

Attachments

(2 files, 1 obsolete file)

A table will have an extra space if a map is defined inside the table (see URL - the first frame). For other elements, the element is moved to outside the table and the table is rendered fine.
The map element will cause an extra space in the table, the br element will be move to before the table.
To parser.
Assignee: karnaze → harishd
Status: UNCONFIRMED → NEW
Component: HTMLTables → Parser
Ever confirmed: true
QA Contact: amar → moied
Harish, We raised this one from the Evangelism Latin America effort. The site is part of Major AOL partner in Brazil (Itau Bank).
I see. If I use the <map> element the generated DOM is: --------------------------------------------> <table bgcolor="green"> <map></map> <tbody>... When I replace to another element (For example a div element), I have: --------------------------> <div></div> <table bgcolor="green"> <tbody>... Harish, Do you think we can consider the MAP like the other elements?
Keywords: testcase
The URL has been redesigned to eliminate the problem.
Attached file Testcase #2
Attachment #85197 - Attachment is obsolete: true
Taking this since I have a simple fix for it...
Assignee: harishd → mats.palmgren
Blocks: html4.01
Summary: A map definition inside a table and outside the tr element will add an extra space to the table → [FIX] A map definition inside a table and outside the tr element will add an extra space to the table
Whiteboard: [patch]
Attached patch Patch rev. 1Splinter Review
Remove MAP as valid child of TABLE/THEAD/TFOOT
The patch makes us compatible with NS4 and IE5.5/IE6. This is also the right thing to do with respect to HTML 4 spec. Opera7 have *exactly* the same bug as Mozilla currently has though. I have tested this extensively; the regression tests pass, the top100 list pass (which means none of them depend on this bug). I have checked all Parser bugs that mentions "map" and "table" in the same bug and found no regressions (among them I found bug 58942 which fixed the same bug for TR). I also checked all Layout bugs matching "<map" and "table" and saw no problems.
Status: NEW → ASSIGNED
Attachment #126246 - Flags: review?(harishd)
Whiteboard: [patch] → [patch] [needs review]
Comment on attachment 126246 [details] [diff] [review] Patch rev. 1 r=harishd
Attachment #126246 - Flags: review?(harishd) → review+
Mats what is the status of this patch? Seems like it has a review :-)
Attachment #126246 - Flags: superreview?(dbaron)
Mats, is there still interest in this patch?
Attachment #126246 - Flags: superreview?(dbaron) → superreview+
Checked in 2005-01-25 16:40 PDT. -> FIXED
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Whiteboard: [patch] [needs review]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: