Remove MAP as a valid child of TABLE, THEAD and TFOOT. b=147446 r=harishd sr=dbaron